# sofar

./: CMakeLists.txt  README.md  package.xml
config/: ekf.yaml  ekf_urdf.yaml
launch/: bringup_launch.py  gz_respawner_stage1.py  gz_respawner_stage2.py  localization_launch.py  multi_floor_navigation_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  sofar_assignment.launch.py  tb3_gazebo_stage1.py  tb3_gazebo_stage2.py  tb3_simulation_launch.py
scripts/: state_machine.py  statemachine.py  statemachine_1.py  test.py
scripts/csuite_controller/: gazebo_suite.py  rviz_suite.py
